# SWE_Project

./: .gitignore  CMakeLists.txt  README.md  Sample Data.xlsx  data.cpp  main.cpp  test.cpp
Data/: Candidate.txt  Voter.txt
Database/: database.cpp  table.cpp
Database/includes/: database.h  table.h
Executables/Data/: Candidate.txt
Tests/: DatabaseTests.cpp  TableTests.cpp
Tests/includes/: DatabaseTests.h  TableTests.h
UI/: UI.cpp
UI/includes/: UI.h
